--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: minima
-title: dhruv-maker-og's personal blog on cool and latest Github & GitHib Copilot updatrs
+title: dhruv-maker-og's personal blog on cool and latest Github & GitHib Copilot updates
 description: This is where I share cool stuff Github & Github copilot features
 author: dhruv-maker-og
+
